# pollmph

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily_sentiment.yml  weekly_summary.yml
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx  supabaseClient.js
frontend/src/components/: PropositionDetail.jsx  PulseDashboard.jsx  theme-toggle.jsx
pipeline/: main.py  mock_xai.py  models.py  proposition.py  propositions.json  supabase-demo.py  system_prompt.py  system_prompt.txt  util.py  visualise.py
pipeline/pytest/: test_main.py
pipeline/scripts/: add_proposition.py  backfill_by_id.py  test_schedule.py  weekly_summary.py
pollmph/: cli.py  db.py  llm.py  models.py  task.py  util.py  workflow.py
pollmph/adapters/: gemini.py  mock.py  ollama.py  xai.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20260222010647_init_tables.sql  20260222014211_add_rls.sql  20260222021929_rename_cols_sentiments.sql  20260222022205_add_movement_analysis.sql  20260222113142_add_propostion_table.sql  20260222120000_enable_public_read_rls.sql  20260224010442_add_archive_proposition.sql  20260224013759_add_index_ui_speedup.sql  20260309035553_add_weekly_summary_table.sql  20260309040352_add_rls_weekly_summary.sql  20260311000000_add_schedule_to_propositions.sql  20260315000000_drop_weekly_summaries_proposition_id_unique.sql
supabase/snippets/: Untitled query 915.sql
