[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pollmph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "supabase>=2.28.0",
    "xai-sdk>=1.7.0",
]

[tool.setuptools.packages.find]
include = ["pipeline*"]
exclude = ["frontend*", "supabase*", "node_modules*"]


