[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pollmph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.0.0",
    "ollama>=0.4.0",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "supabase>=2.28.0",
    "typer>=0.12.0",
    "xai-sdk>=1.7.0",
]

[project.scripts]
pollmph = "pollmph.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pollmph"]


